# storage/api-docs/api-docs.json
@@ -6,6 +6,181 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/admin/orders": {
+            "get": {
+                "tags": [
+                    "Admin Orders"
+                ],
+                "summary": "Admin - danh sách đơn hàng",
+                "operationId": "b3c2959ec596b635f90b13a394653101",
+                "parameters": [
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "payment_status",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Danh sách đơn thành công"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/admin/orders/{order_code}": {
+            "get": {
+                "tags": [
+                    "Admin Orders"
+                ],
+                "summary": "Admin - chi tiết đơn hàng",
+                "operationId": "55441705bbf9723db94fe0eed18570bc",
+                "parameters": [
+                    {
+                        "name": "order_code",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Chi tiết đơn hàng"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/admin/orders/{id}/status": {
+            "patch": {
+                "tags": [
+                    "Admin Orders"
+                ],
+                "summary": "Admin - cập nhật trạng thái đơn",
+                "operationId": "3285266b3e4c5fb7b8bae91fa5c03661",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "status": {
+                                        "type": "string",
+                                        "example": "confirmed"
+                                    },
+                                    "note": {
+                                        "type": "string",
+                                        "example": "Khách đã chuyển khoản"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Cập nhật thành công"
+                    },
+                    "409": {
+                        "description": "Trạng thái không hợp lệ"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/admin/orders/{id}/payment-status": {
+            "patch": {
+                "tags": [
+                    "Admin Orders"
+                ],
+                "summary": "Admin - cập nhật thanh toán",
+                "operationId": "0929e6855fb23ac690884a56fc9ee034",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "payment_status": {
+                                        "type": "string",
+                                        "example": "paid"
+                                    },
+                                    "transaction_ref": {
+                                        "type": "string",
+                                        "example": "VCB-123456"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Cập nhật thanh toán thành công"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/admin/products": {
             "get": {
                 "tags": [
@@ -1313,6 +1488,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Admin Orders",
+            "description": "Admin Orders"
+        },
         {
             "name": "Admin Products",
             "description": "Admin Products"
